[package]
name = "interface"
version = "0.1.1"
authors = ["Dynisious <daniel.bechaz@gmail.com>"]
license = "0BSD"

[features]
debug = []
keys = []
display = []

[dependencies]
winapi = { version = "*", features = ["wincon", "consoleapi", "processenv", "winbase", "handleapi", "fileapi", "winuser"] }
